[package]
name = "delharc"
version = "0.3.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
description = "A library for parsing and extracting files from LHA/LZH archives."
categories = ["compression"]
keywords = ["LHA", "LZH", "UNLHA"]
homepage = "https://github.com/royaltm/rust-delharc"
repository = "https://github.com/royaltm/rust-delharc"
license = "MIT"
readme = "README.md"
exclude = ["/.travis.yml", ".gitignore", "tests/*"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["lh1", "lz"]
lh1 = []
lhx = []
lz = []

[dependencies]
chrono = "0.4"
bitflags = "1.3"
memchr = { version = "2", default-features = false }

[dev-dependencies]
crc-any = "2.4"
rand = "0.8.4"
