[package]
name = "delharc-embedded-example"
version = "0.1.0"
authors = ["Rafał Michalski <royaltm75@gmail.com>"]
edition = "2021"
description = "A small example of using delharc with a `no_std` target"
license = "MIT OR Apache-2.0"

[[bin]]
name="embedded"
path="embedded.rs"

[dependencies]
delharc = { version = "*", path = "../..", default-features = false, features = ["lh1", "lz"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
embedded-alloc = "0.5"
